[package]
name = "streamtify"
version = "0.1.0"
edition = "2024"

[dependencies]
# พระเอกของเรา: ระบบ Async และ TCP
tokio = { version = "1", features = ["full"] }

# ตัวแปลงข้อมูลเป็น JSON เพื่อส่งข้ามเครื่อง
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"                                     # พระเอกใหม่ สำหรับ WebSocket
futures-util = "0.3"  # <--- แก้จาก _ เป็น - ตรงนี้ครับ
